# sqisign-nist2

./: DEVELOPERS.md  NOTICE
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/dim2id2iso/ref/dim2id2isox/test/: test_dim2id2iso.c
src/ec/ref/ecx/test/: fp2-test.c
src/ec/ref/lvl1/test/: test-basis.h
src/ec/ref/lvl3/test/: CMakeLists.txt
src/id2iso/ref/id2isox/test/: test_id2iso.c
src/precomp/ref/lvl1/: CMakeLists.txt
src/precomp/ref/lvl3/: CMakeLists.txt
src/precomp/ref/lvl5/: CMakeLists.txt
src/quaternion/ref/generic/: CMakeLists.txt
src/quaternion/ref/generic/standalone/: common  intbig
src/quaternion/ref/generic/test/: CMakeLists.txt  test_quaternions.c
